--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,20 @@
-asgiref==3.8.1
-bleach==6.1.0
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-cloudinary==1.36.0
-crispy-bootstrap5==0.7
-cryptography==41.0.7
-defusedxml==0.7.1
+asgiref==3.3.4
+cloudinary==1.25.0
 dj-database-url==0.5.0
-dj-rest-auth==6.0.0
-dj3-cloudinary-storage==0.0.6
-Django==5.0.6
-django-allauth==0.60.0
-django-cors-headers==4.3.1
-django-crispy-forms==2.1
-django-filter==24.2
-django-summernote==0.8.20.0
-djangorestframework==3.15.1
-djangorestframework-simplejwt==5.3.1
+dj-rest-auth==2.1.9
+Django==3.2.4
+django-allauth==0.44.0
+django-cloudinary-storage==0.3.0
+django-cors-headers==3.7.0
+django-filter==2.4.0
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.7.2
 gunicorn==20.1.0
-idna==3.6
-oauthlib==3.2.2
-pillow==10.3.0
-psycopg2-binary==2.9.9
-pycparser==2.21
-PyJWT==2.8.0
+oauthlib==3.1.1
+Pillow==8.2.0
+psycopg2==2.9.1
+PyJWT==2.1.0
 python3-openid==3.2.0
-pytz==2019.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-rest-framework-simplejwt==0.0.2
-setuptools==69.0.3
-six==1.16.0
-sqlparse==0.5.0
-urllib3==1.26.18
-webencodings==0.5.1
-whitenoise==5.3.0
+pytz==2021.1
+requests-oauthlib==1.3.0
+sqlparse==0.4.1
